<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="mine_app_name">掌上重邮</string>

    <!--    从邮问偷的值-->
    <string name="mine_dialog_tip_deny_text">取消</string>
    <string name="mine_dialog_tip_positive_text">确定</string>

    <string name="mine_user_empty_username">请填写用户名</string>
    <string name="mine_user_empty_introduce">写下你对世界想说的话，就现在</string>
    <string name="mine_to_download">扫一扫下载，长按保存</string>

    <!--    首页-->
    <!--TODO: 删除无用String-->
    <string name="mine_sign_name">签到</string>
    <string name="mine_sing_successive_default">已连续签到 天</string>
    <string name="mine_question">提问</string>
    <string name="mine_answer">回答</string>
    <string name="mine_reply_to_comment">评论</string>
    <string name="mine_praise">获赞</string>
    <string name="mine_number_default">--</string>
    <string name="mine_show_schedule_first_launch">启动APP时最先显示课表页面</string>
    <string name="mine_custom_icon">自定义桌面小图标</string>
    <string name="mine_feedback_suggestion">意见与反馈</string>
    <string name="mine_security">账号与安全</string>
    <string name="mine_about_redrock">红岩网校</string>
    <string name="mine_about">关于掌邮</string>
    <string name="mine_exit">退出登录</string>
    <string name="mine_login_now">马上登录</string>
    <string name="mine_logout_title">退出登录</string>
    <string name="mine_logout_content">是否退出当前账号？</string>
    <string name="mine_dynamic">动态</string>
    <!--    编辑-->
    <string name="mine_nickname">昵称</string>
    <string name="mine_nickname_default">输入您的昵称</string>
    <string name="mine_nickname_null">昵称不可为空哦</string>
    <string name="mine_introduce">个性签名</string>
    <string name="mine_gender">性别</string>
    <string name="mine_gender_default">请选择性别</string>
    <string name="mine_birth">生日</string>
    <string name="mine_birth_default">填写生日后会匹配出对应星座哦</string>
    <string name="mine_introduce_default">输入个性签名</string>
    <string name="mine_qq">QQ</string>
    <string name="mine_phone">电话</string>
    <string name="mine_college">学院</string>
    <string name="mine_info_default">完善你的个人信息哦</string>
    <string name="mine_info_save">已保存</string>
    <string name="mine_info_contact">写下您的联系方式，便于我们与您联系</string>
    <string name="mine_exit_edit">退出编辑</string>
    <string name="mine_exit_edit_quest">你的资料还未保存，是否退出？</string>
    <string name="mine_dialog_edit_ensure">确定</string>
    <!--    签到-->
    <string name="mine_sign_to_sign">签到</string>
    <string name="mine_sign_mon">周一</string>
    <string name="mine_sign_tue">周二</string>
    <string name="mine_sign_wed">周三</string>
    <string name="mine_sign_thurs">周四</string>
    <string name="mine_sign_fri">周五</string>
    <string name="mine_sign_sat">周六</string>
    <string name="mine_sign_sun">周日</string>
    <string name="mine_sign_year_default">2019-2020</string>
    <string name="mine_sign_week_default">上学期第--周</string>
    <string name="mine_sign_serialDays_default">已连续打卡--天</string>
    <string name="mine_sign_ranking_default">还没有打卡哦</string>
    <string name="mine_sign_ranking_percentage_default">超过--%的邮子</string>
    <string name="mine_sign_week_integral">10积分</string>
    <string name="mine_sign_store_integral_default">--</string>
    <string name="mine_sign_store_title">积分商城</string>
    <string name="mine_sign_store_my_product">我的商品</string>
    <string name="mine_sign_store_item_name_default">redrock限量手环</string>
    <string name="mine_sign_store_item_count_default">仅剩555件</string>
    <string name="mine_sign_store_item_integral_default">13</string>
    <string name="mine_sign_store_item_exchange">兑换</string>
    <string name="mine_sign_store_item_exchange_for_sure">商品兑换</string>

    <string name="mine_my_product_time_pre">兑换时间：</string>
    <string name="mine_my_product">商品领取</string>
    <string name="mine_my_product_unclaimed">如果是实体商品，请携带有效证件前往红岩网校工作站B区领取奖品</string>
    <string name="mine_my_product_claimed">商品已经领了哟，继续攒积分兑换更多奖品吧</string>


    <!--草稿箱-->
    <string name="mine_draft_delete_success">删除成功</string>
    <string name="mine_draft_delete_failed">删除失败</string>


    <!--评论-->
    <string name="mine_comment_at_start">你评论了 </string>
    <string name="mine_comment_at_end"> 的回答</string>
    <string name="mine_comment_received_at_end"> 评论了你的回答</string>


    <!--关于-->
    <string name="mine_about_sharing">分享</string>
    <string name="mine_about_function_intro">功能介绍</string>
    <string name="mine_about_website">产品官网</string>
    <string name="mine_about_legal">《掌上重邮用户使用条款》</string>
    <string name="mine_about_update">版本更新</string>
    <string name="mine_about_1">红岩网校工作站出品</string>
    <string name="mine_about_copyright">CopyRight © 2015&#8211;2021 All Rights Reserved</string>
    <string name="mine_about_icp_info">ICP备案号: 渝ICP备17002788号-7A</string>
    <string name="mine_sign_store_back">store back</string>

    <!--密码与安全-->

    <string name="mine_security_change_pass_word_hint">重设密码</string>
    <string name="mine_security_forget_pass_word_hint">请输入学号</string>
    <string name="mine_security_change_pass_word">修改密码</string>
    <string name="mine_security_change_secret_security">修改密保</string>
    <string name="mine_security_change_binding_mail">修改绑定邮箱</string>
    <string name="mine_security_dialog_tip">温馨提示</string>
    <string name="mine_security_please_input_password">请再输入6–16位新密码</string>
    <string name="mine_security_forget_password">忘记密码？</string>
    <string name="mine_security_next">下一步</string>
    <string name="mine_security_your_password_protect_question">你的保密问题是：</string>
    <string name="mine_security_sel_question">选择一个密保问题</string>
    <string name="mine_security_answer_to_question">你的问题的回答是</string>
    <string name="mine_security_your_best_friend_name"> </string>
    <string name="mine_security_confirm">确定</string>
    <string name="mine_security_bind_email">绑定邮箱</string>
    <string name="mine_security_type_in_email_address">请输入邮箱地址：</string>
    <string name="mine_security_type_in_old_password">请输入旧密码</string>
    <string name="mine_security_resend">重新发送</string>
    <string name="mine_security_please_type_correct_address">请输入正确的邮箱地址</string>
    <string name="mine_security_please_type_new_words">请输入6–16位新密码</string>
    <string name="mine_security_change_password">修改密码</string>
    <string name="mine_security_new_password_incorrect">新密码不符合要求，请重新输入</string>
    <string name="mine_security_retype">确认密码和新密码不符，请重新输入</string>
    <string name="mine_security_bind_email_next">下一步</string>
    <string name="mine_security_bind_email_sent_to_your_email">已向你的邮箱发送了一条验证码</string>
    <string name="mine_security_bind_email_bind_succeed">验证成功</string>
    <string name="mine_security_bind_email_bind_failed">验证失败</string>
    <string name="mine_security_bind_email_code_expire">验证码已过期</string>
    <string name="mine_security_your_password_question_is">你的密保问题是</string>
    <string name="mine_security_answer_to_your_question_is">你的问题答案是：</string>
    <string name="mine_security_please_input_answer">请输入密保问题的答案（由2–16位字符组成）</string>
    <string name="mine_security_contract_us">验证失败？联系我们</string>
    <string name="mine_security_please_set_protect_or_bind_email">为了您的账号安全，请设置密保/绑定邮箱</string>
    <string name="mine_security_set_password_protect">设置密保</string>
    <string name="mine_security_default_password_hint">你的密码未曾修改，请试试初始密码:身份证后六位/2020级为统一认证码后六位</string>
    <string name="mine_security_relogin">重新登录</string>
    <string name="mine_security_find_password">找回密码</string>
    <string name="mine_security_please_type_in_confirm_code">请输入验证码</string>
    <string name="mine_security_click_to_get_confirm_code">你的保密邮箱是，请点击获取验证码</string>
    <string name="mine_security_get_confirm_code">获取验证码</string>
    <string name="mine_security_out_of_date_or_wrong">验证码有误或过期，请重新获取</string>
    <string name="mine_string_about_us">关于我们</string>
    <string name="mine_string_setting">设置</string>
    <string name="mine_string_score_store">积分商城</string>

    <string name="mine_person_focus_success">关注成功</string>
    <string name="mine_person_change_focus_status_failed">操作失败</string>
    <string name="mine_person_unfocus_success">取关成功</string>
    <string name="mine_person_fan_empty_self">暂时没有人关注你呢...</string>
    <string name="mine_person_fan_empty">暂时没有人关注他呢...</string>
    <string name="mine_person_focus_empty_self">你还没有关注任何掌友...</string>
    <string name="mine_person_focus_empty">他还没有关注任何掌友...</string>
    <string name="mine_person_empty_notification">消息中心正在搭建，待开放ing</string>

    <string name="mine_lack_text">欸,您暂时还没有任何身份,可以前往“重邮帮”小程序通过”身份有证”申请身份,或者前往 邮票中心 兑换个性化身份</string>
    <string name="mine_status_message">长按下方身份牌并拖动到此处，即可在昵称后面展示你的专属身份！</string>

    <!--    反馈编辑页-->
    <string name="mine_feedback_toolbar_title">意见反馈</string>
    <string name="mine_feed_edit_title_tv">添加标题</string>
    <string name="mine_feedback_edit_description_tv">请添加问题描述</string>
    <string name="mine_feedback_edit_pic_tv">相关问题的截图或照片</string>
    <string name="mine_feedback_edit_btn_tv">提交</string>
    <string name="mine_stamp_back_iv">返回键</string>

    <!--    意见与反馈页-->
    <string name="mine_feedback_center_toolbar_title">意见与反馈</string>
    <string name="mine_feedback_center_history_icon">历史反馈</string>
    <string name="mine_feedback_center_normal_question">常见问题</string>
    <string name="mine_feedback_center_btn_tv">意见反馈</string>
    <string name="mine_feedback_center_qq_tv">实时反馈可添加QQ反馈群：</string>
    <string name="mine_feedback_center_qq_num">57919844</string>
    <string name="mine_feedback_edit_title_num">12</string>
    <string name="mine_feedback_edit_description_num">%d/200</string>
    <string name="mine_feedback_edit_pic_num">%d/3</string>

    <!--    详情页-->
    <string name="mine_feedback_detail_toolbar_title">怎么才能把我的课表放到桌面鸭</string>

    <!--    feedback-->
    <string name="mine_feedback_back_ic_description">返回键</string>
    <string name="mine_feedback_toolbar_text">历史反馈</string>
    <string name="mine_feedback_recycle_item_test_date">2021/07/25 13:44</string>
    <string name="mine_feedback_recycle_item_reply_text">已回复</string>
    <string name="mine_feedback_recycle_item_test_title">参加买一送一活动</string>
    <string name="mine_feedback_feedback_date_text">2021/07/25 13:44</string>
    <string name="mine_feedback_cards_title">参与买一送一活动</string>
    <string name="mine_feedback_reply_date_test_text">2021/07/25 15:44</string>
    <string name="mine_feedback_reply_content_text">回复：%s</string>
    <string name="mine_feedback_none_reply_text_content">还没有收到回复哦~再等等吧！</string>
    <string name="mine_feedback_label_text">#%s</string>
    <string name="mine_feedback_feedback_content_text">今天喝了脉动呐，吃了果冻呐，打了电动呐， 还是挡不住对你的心动呐~</string>
    <string name="mine_feedback_none_history_text">你还没有提交过反馈意见哦~</string>
    <string name="mine_about_user_protocol">《用户协议》</string>
    <string name="mine_about_and"><![CDATA[&]]></string>
    <string name="mine_about_privacy_statement">《隐私权声明》</string>


</resources>
