<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context=".UserFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mine_main_avatar"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/mine_avatar_default_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mine_main_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_user_empty_username"
                android:textColor="@color/levelOneFontColor"
                android:textSize="@dimen/mine_main_medium_l"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/mine_main_introduce"
                app:layout_constraintTop_toTopOf="@+id/mine_main_avatar" />

            <TextView
                android:id="@+id/mine_main_introduce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:maxLength="20"
                android:maxLines="1"
                android:text="@string/mine_user_empty_introduce"
                android:textColor="@color/levelOneFontColor"
                android:textSize="@dimen/mine_main_small"
                app:layout_constraintBottom_toBottomOf="@+id/mine_main_avatar"
                app:layout_constraintEnd_toStartOf="@+id/mine_main_avatar_edit"
                app:layout_constraintStart_toEndOf="@+id/mine_main_avatar"
                app:layout_constraintTop_toBottomOf="@+id/mine_main_username" />

            <ImageView
                android:id="@+id/mine_main_avatar_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:src="@drawable/mine_setting_info_btn"
                app:layout_constraintBottom_toBottomOf="@+id/mine_main_introduce"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/mine_main_username" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/mine_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_sing_successive_default"
                    android:textColor="@color/levelOneFontColor"
                    android:textStyle="bold"
                    android:textSize="@dimen/mine_main_medium"
                    app:layout_constraintBottom_toTopOf="@+id/mine_guideline"
                    app:layout_constraintStart_toStartOf="@+id/mine_main_tv_question"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/mine_main_btn_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/mine_bg_round_corner_blue"
                    android:minWidth="80dp"
                    android:minHeight="30dp"
                    android:text="@string/mine_sign_name"
                    android:textColor="@color/whiteFontColor"
                    android:textSize="@dimen/mine_main_medium"
                    app:layout_constraintBottom_toTopOf="@+id/mine_guideline"
                    app:layout_constraintEnd_toEndOf="@+id/mine_main_tv_praise"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mine_main_question_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_number_default"
                    android:textSize="@dimen/mine_main_large_l"
                    android:textStyle="bold"
                    android:textColor="@color/levelFourFontColor"
                    app:layout_constraintBottom_toTopOf="@+id/mine_main_tv_question"
                    app:layout_constraintEnd_toEndOf="@+id/mine_main_tv_question"
                    app:layout_constraintStart_toStartOf="@+id/mine_main_tv_question"
                    tools:text="10"/>

                <TextView
                    android:id="@+id/mine_main_answer_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_number_default"
                    android:textColor="@color/levelFourFontColor"
                    android:textSize="@dimen/mine_main_large_l"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/mine_main_tv_answer"
                    app:layout_constraintEnd_toEndOf="@+id/mine_main_tv_answer"
                    app:layout_constraintStart_toStartOf="@+id/mine_main_tv_answer" />

                <TextView
                    android:id="@+id/mine_main_reply_comment_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_number_default"
                    android:textSize="@dimen/mine_main_large_l"
                    android:textStyle="bold"
                    android:textColor="@color/levelFourFontColor"
                    app:layout_constraintBottom_toTopOf="@+id/mine_main_tv_reply_comment"
                    app:layout_constraintEnd_toEndOf="@+id/mine_main_tv_reply_comment"
                    app:layout_constraintStart_toStartOf="@+id/mine_main_tv_reply_comment" />

                <TextView
                    android:id="@+id/mine_main_praise_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_number_default"
                    android:textSize="@dimen/mine_main_large_l"
                    android:textStyle="bold"
                    android:textColor="@color/levelFourFontColor"
                    app:layout_constraintBottom_toTopOf="@+id/mine_main_tv_praise"
                    app:layout_constraintEnd_toEndOf="@+id/mine_main_tv_praise"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintStart_toStartOf="@+id/mine_main_tv_praise" />

                <TextView
                    android:id="@+id/mine_main_tv_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/mine_question"
                    android:textSize="@dimen/mine_main_small"
                    android:textColor="@color/levelFourFontColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/mine_main_tv_answer"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mine_guideline" />

                <TextView
                    android:id="@+id/mine_main_tv_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_answer"
                    android:textSize="@dimen/mine_main_small"
                    android:textColor="@color/levelFourFontColor"
                    app:layout_constraintBottom_toBottomOf="@+id/mine_main_tv_question"
                    app:layout_constraintEnd_toStartOf="@+id/mine_main_tv_reply_comment"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/mine_main_tv_question" />

                <TextView
                    android:id="@+id/mine_main_tv_reply_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_reply_to_comment"
                    android:textSize="@dimen/mine_main_small"
                    android:textColor="@color/levelFourFontColor"
                    app:layout_constraintBottom_toBottomOf="@+id/mine_main_tv_answer"
                    app:layout_constraintEnd_toStartOf="@+id/mine_main_tv_praise"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/mine_main_tv_answer" />

                <TextView
                    android:id="@+id/mine_main_tv_praise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_praise"
                    android:textSize="@dimen/mine_main_small"
                    android:textColor="@color/levelFourFontColor"
                    app:layout_constraintBottom_toBottomOf="@+id/mine_main_tv_reply_comment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/mine_main_tv_reply_comment" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/mine_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="79dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/mine_show_schedule_first_launch"
            android:textColor="@color/levelThreeFontColor"
            android:textSize="@dimen/mine_main_medium" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/mine_night_mode"
            android:textColor="@color/levelThreeFontColor"
            android:textSize="@dimen/mine_main_medium" />

        <TextView
            android:id="@+id/mine_main_tv_custom_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/mine_custom_icon"
            android:textColor="@color/levelThreeFontColor"
            android:textSize="@dimen/mine_main_medium" />

        <TextView
            android:id="@+id/mine_main_tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/mine_feedback_suggestion"
            android:textColor="@color/levelThreeFontColor"
            android:textSize="@dimen/mine_main_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/mine_about_redrock"
            android:textColor="@color/levelThreeFontColor"
            android:textSize="@dimen/mine_main_medium" />

        <TextView
            android:id="@+id/mine_main_tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/mine_about"
            android:textColor="@color/levelThreeFontColor"
            android:textSize="@dimen/mine_main_medium" />

        <Button
            android:id="@+id/mine_main_btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mine_bg_round_corner_blue"
            android:minWidth="180dp"
            android:layout_marginTop="36dp"
            android:minHeight="44dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/mine_exit"
            android:textColor="@color/whiteFontColor"
            android:textSize="@dimen/mine_main_medium_l" />
        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
